--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,28 @@ run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+# NEO FORGE below
+
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+.idea
+
+# gradle
+build
+
+# other
+eclipse
+run
+runs
+run-data
+
+repo
