--- a/gradle.properties
+++ b/gradle.properties
@@ -45,3 +45,4 @@ mod_description=Brings Stardew Valley's fishing minigame to Minecraft, and more.
 jei_version=19.21.2.313
 aquaculture_version=2.7.14
 cloth_version=15.0.140
+geckolib_version=4.7.6
