--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
-public net.minecraft.world.entity.ai.attributes.AttributeMap f_22139_ # attributes
-public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen f_97734_ # hoveredSlot
-public net.minecraft.world.entity.projectile.FishingHook f_37096_ # luck
+public net.minecraft.world.entity.ai.attributes.AttributeMap attributes
+public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen hoveredSlot
+public net.minecraft.world.entity.projectile.FishingHook luck
+public net.minecraft.client.DeltaTracker$Timer deltaTickResidual
